# automotive-ui

./: .gitignore  CMakeLists.txt  README.md
docs/: COMPLIANCE_ASSESSMENT.md  TURN_INDICATORS.md  assumptions.md
docs/adas/: driver_ui_requirements.md  infotainment_requirements.md  levels_matrix.md  overview.md  scenarios.md  security.md
docs/safety/: Functional_Safety_Concept.md  HARA.md  Item_Definition.md  SOTIF_Scenarios.md  Safety_Case.md  Safety_Plan.md  Technical_Safety_Concept.md  Verification_Plan.md
docs/security/: Asset_Inventory.md  Cybersecurity_Plan.md  Incident_Response.md  Security_Requirements.md  Security_Test_Plan.md  TARA.md
driver_ui/: CMakeLists.txt
driver_ui/app/: main.cpp
driver_ui/app/cpp/: AdasViewModel.cpp  AdasViewModel.h  ClusterApplication.cpp  ClusterApplication.h  ClusterViewModel.cpp  ClusterViewModel.h
driver_ui/app/qml/: AlertOverlay.qml  ClusterView.qml  DegradedModeView.qml  DriveView.qml  GearIndicator.qml  Main.qml  TelltaleBar.qml  TurnIndicator.qml
driver_ui/app/qml/adas/: AdasStateZone.qml  PerceptionMiniView.qml  TakeoverBanner.qml  qmldir
driver_ui/app/resources/: resources.qrc
driver_ui/safety_core/cpp/: AlertManager.cpp  AlertManager.h  ClusterStateModel.cpp  ClusterStateModel.h  DegradedModeController.cpp  DegradedModeController.h  FaultInjector.cpp  FaultInjector.h  SafetyMonitor.cpp  SafetyMonitor.h  TelltaleManager.cpp  TelltaleManager.h
infotainment_ui/: BEFORE_AFTER.md  CMakeLists.txt  DESIGN_SYSTEM_GUIDE.md  LOGO_SCROLLING_UPDATES.md  MAP_PHONE_DRIVER_UPDATES.md  MEDIA_NAV_CONSISTENCY.md  NOW_PLAYING_BAR_UPDATES.md  PHONE_PROJECTION_UPDATES.md  SCROLLING_FIXES.md  SUMMARY.md  TESTING_CHECKLIST.md  UI_IMPROVEMENTS.md  UI_README.md  VEHICLE_PAGE_THEMING.md
infotainment_ui/app/: main.cpp
infotainment_ui/app/cpp/: AppFramework.cpp  AppFramework.h  MediaController.cpp  MediaController.h  NavigationController.cpp  NavigationController.h  PermissionManager.cpp  PermissionManager.h  PhoneController.cpp  PhoneController.h  ProjectionController.cpp  ProjectionController.h  SecureSettings.cpp  SecureSettings.h  VehicleSettingsController.cpp  VehicleSettingsController.h
infotainment_ui/app/qml/: AppDrawer.qml  AppShell.qml  DesignTokens.qml  HomePage.qml  Main.qml  MediaPage.qml  NavigationPage.qml  NavigationRail.qml  NowPlayingBar.qml  PhonePage.qml  ProjectionPage.qml  SettingsPage.qml  VehiclePage.qml
infotainment_ui/app/qml/autonomy/: AutonomyCenterPage.qml  AutonomySettings.qml  CapabilityOverview.qml  EventTimeline.qml  OddViewer.qml  PerceptionExplorer.qml  WhyUnavailable.qml  qmldir
reports/: compliance_evidence_20251224_204140.md
reports/analysis/: code_metrics_20251224_204132.txt  qmllint_20251224_204132.txt
shared/: CMakeLists.txt
shared/cpp/adas/: AdasEngagement.h  AdasStateService.cpp  AdasStateService.h  AdasTypes.h  AdasVisualQualityManager.cpp  AdasVisualQualityManager.h  HmiEventLog.cpp  HmiEventLog.h  PerceptionModel.cpp  PerceptionModel.h  TakeoverManager.cpp  TakeoverManager.h
shared/cpp/ipc/: IpcChannel.cpp  IpcChannel.h  IpcClient.cpp  IpcClient.h  IpcMessage.cpp  IpcMessage.h  IpcServer.cpp  IpcServer.h
shared/cpp/logging/: LogSink.cpp  LogSink.h  Logger.cpp  Logger.h  PiiRedactor.cpp  PiiRedactor.h
shared/cpp/sched/: DeterministicScheduler.cpp  DeterministicScheduler.h  TimeSource.cpp  TimeSource.h
shared/cpp/signal/: SignalHub.cpp  SignalHub.h  SignalValidator.cpp  SignalValidator.h  VehicleSignals.cpp  VehicleSignals.h
shared/qml/Adas3D/: AdasScene3D.qml  LaneBoundaryLine.qml  LeadVehicleMarker.qml  ObjectInstances.qml  RoadVisualization.qml  WeatherParticles.qml  qmldir
shared/qml/Components/: AlertBanner.qml  ArcGauge.qml  Card.qml  GaugeBase.qml  IconButton.qml  ListItem.qml  NavigationBar.qml  ProgressBar.qml  SpeedGauge.qml  Telltale.qml  Toggle.qml
shared/qml/DesignSystem/: Animations.qml  Colors.qml  Spacing.qml  Tokens.qml  Typography.qml
shared/qml/assets/fonts/: fonts.qrc
specifications /: ADAS_Autonomy_UI_Spec.md  ADAS_Autonomy_UI_Spec_v2_EosAligned.md  ADAS_Cybersecurity_Addendum.md  ADAS_Cybersecurity_Addendum_v2_EosAligned.md  ADAS_Safety_Requirements_Addendum.md  ADAS_Safety_Requirements_Addendum_v2_EosAligned.md  Automotive_UI_LLM_Agents_Spec.md  Cybersecurity_TARA_Skeleton.md  LLM_instruct.md  LLM_instruct_2.md  Safety_HARA_SOTIF_Skeleton.md  Traceability_Template.md
tests/: CMakeLists.txt
tests/adas/: test_adas_state_service.cpp  test_perception_model.cpp  test_takeover_manager.cpp
tests/helpers/: MockSignalHub.cpp  MockSignalHub.h  MockTimeSource.cpp  MockTimeSource.h  TestFixtures.cpp  TestFixtures.h
tests/integration/: test_signal_flow.cpp  test_ui_responsiveness.cpp
tests/ipc/: test_ipc_channel.cpp  test_ipc_message.cpp
tests/safety/: test_alert_manager.cpp  test_cluster_state_model.cpp  test_degraded_mode.cpp  test_fault_injector.cpp  test_signal_validator.cpp
tests/security/: test_ipc_integrity.cpp  test_permission_manager.cpp  test_pii_redactor.cpp  test_secure_settings.cpp
tools/: run_desktop.ps1  run_desktop.sh  run_static_analysis.sh
tools/traceability/: generate_report.py
